# sat_puzzles

./: Cargo.toml  LICENSE  README.md
MapColouring/Maps/: australia.txt  france.txt
MapColouring/Visualisation/: visualise_map_au.py  visualise_map_france.py  visualise_map_usa.py
Maps/: france.txt  usa.txt
Minesweeper/: grid9x9.txt
Sudoku/: easy1.txt  harder1.txt
src/: lib.rs  main.rs  mapcolouring.rs  minesweeper_sat.rs  n_queens.rs  nqueens.rs  nqueens_sat.rs  sudoku.rs  sudoku_sat.rs
