[package]
name = "sat_puzzles"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
itertools = "0.14.0"
thiserror = "2.0.16"
varisat = "0.2.2"
minesweeper-rs = {git = "https://github.com/jesper-olsen/minesweeper-rs" }
rand = "0.9.2"
rayon = "1.11.0"

